rectifying image not showing issues

--- a/public/style.css
+++ b/public/style.css
@@ -540,7 +540,7 @@ input:focus {
     margin-left: 0.8rem;
   }
   #card-img {
-    width: 18rem;
+    width: 16rem;
 
   }
 }
